--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="">
   <script src="js/places.json"></script>
   <link rel="stylesheet" href="styles/first_map.css">
+  <title> Florida Beaches </title>
+</head>
 <body>
   <h1>Florida Beaches </h1>
   <div id="mapid"></div>
   <p> By: Tranelle Maner</p>
-  <p>The following map lists out some of the top beaches across the state of Florida.</p>
+  <p>The following map lists out some of the top beaches across the state of Florida. You can view the code for this map on my GitHub <a href="https://github.com/tranellemaner/Leaflet">here</a>.</p>
 <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
 <script src="js/second_map.js"></script>
 </body>
