--- a/first_map.html
+++ b/first_map.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="">
 <link rel="stylesheet" href="styles/first_map.css">
+<title> Rhode Island Map </title>
+</head>
 <body>
   <h1>Rhode Island Top Flea Markets</h1>
   <div id="mapid"></div>
