--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <title> Florida Beaches </title>
 </head>
 <body>
+<article>
   <h1>Florida Beaches </h1>
   <div id="mapid"></div>
   <p> By: Tranelle Maner</p>
   <p>The following map lists out some of the top beaches across the state of Florida. You can view the code for this map on my GitHub <a href="https://github.com/tranellemaner/Leaflet">here</a>.</p>
+</article>
 <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
 <script src="js/second_map.js"></script>
 </body>
